<resources xmlns:tools="http://schemas.android.com/tools">
    <!--Default-->
    <string name="app_name" tools:override="true">Coinz</string>
    <string name="action_settings">Settings</string>
    <!--Mapbox-->
    <string name="access_token">pk.eyJ1IjoibmFycmlrIiwiYSI6ImNqcDBkNHVrcjA0eTIza210c2twYzhnbGYifQ.qzC3CULlVh-FLMvIsOqOdQ</string>
    <!--Firebase-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_login">Login</string>
    <string name="hint_account">Don\'t have an account?</string>
    <string name="hint_register">Register</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="accept">accept</string>
    <string name="looks_like_it_s_your_first_time_here">Looks like it\'s your first time here!</string>
    <string name="bank">Bank</string>
    <string name="sign_out">Sign Out</string>
    <string name="chat">Chat</string>
    <string name="coininfo">coininfo</string>
    <string name="goldinfo">goldinfo</string>
    <string name="rates">Rates</string>
    <string name="dolr">DOLR</string>
    <string name="shil">SHIL</string>
    <string name="peny">PENY</string>
    <string name="quid">QUID</string>
    <string name="exchangeRates">Exchange rates at the bank:</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="send_spare_change_to_another_user">Send spare change to another user!</string>
    <string name="send_spare_change_to">Send spare change to</string>
    <string name="gold_bag">Gold Bag</string>
    <string name="gold">GOLD</string>
    <string name="bank_allowance">Bank Allowance</string>
    <string name="your_gold_and_coin_bank_in_limit">Your Gold and coin bank-in limit:</string>
    <string name="switch_to_spare_change">Switch to Spare Change</string>
    <string name="bank_in_selected_coins">Bank-In selected coins</string>
    <string name="_25_remaining">/25 bank-in limit</string>
    <string name="nolimit">No Limit</string>
    <string name="loading">loading…</string>
    <string name="currency_icon">Currency Icon</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="play">Play</string>
    <string name="coinz">Coinz</string>
    <string name="welcome_to_coinz">Welcome to Coinz!</string>
</resources>
